force-app/main/default/objects/Proposal_Site__c/fields/Is_Contributing_to_SBC__c.field-meta.xml
<CustomField>
    <fullName>Is_Contributing_to_SBC__c</fullName>
    <label>Is Contributing to SBC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>