force-app/main/default/objects/Proposal_Site__c/fields/is_Headquaters__c.field-meta.xml
<CustomField>
    <fullName>is_Headquaters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Headquaters</label>
    <type>Checkbox</type>
</CustomField>