force-app/main/default/objects/Proposal_Site__c/fields/Is_meet_CS_goals__c.field-meta.xml
<CustomField>
    <fullName>Is_meet_CS_goals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company has sustainability goals</label>
    <type>Checkbox</type>
</CustomField>