force-app/main/default/objects/Proposal_Site__c/fields/Is_NYC_504_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Is_NYC_504_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NYC 504 Compliant</label>
    <type>Checkbox</type>
</CustomField>