force-app/main/default/objects/Proposal_Site__c/fields/Is_the_Property_New_Construction__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Property_New_Construction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the Property New Construction</label>
    <type>Checkbox</type>
</CustomField>