force-app/main/default/objects/Proposal_Site__c/fields/Is_this_a_site_of_critical_infrstructure__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_site_of_critical_infrstructure__c</fullName>
    <description>S-00483: Actual Name=&gt; Is this a site of critical infrastructure?</description>
    <label>Is this a site of critical infrstructure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>