force-app/main/default/objects/Proposal_Site__c/fields/Length_of_Lease__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Lease__c</fullName>
    <inlineHelpText>Provide the current lease length of the tenant requesting the package.</inlineHelpText>
    <label>Length of Lease</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>