force-app/main/default/objects/Proposal_Site__c/fields/Level_of_monitored_systems__c.field-meta.xml
<CustomField>
    <fullName>Level_of_monitored_systems__c</fullName>
    <label>Level of monitored systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Device</fullName>
            </value>
            <value>
                <fullName>Panel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>