force-app/main/default/objects/Proposal_Site__c/fields/LIPA__c.field-meta.xml
<CustomField>
    <fullName>LIPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LIPA</label>
    <type>Checkbox</type>
</CustomField>