force-app/main/default/objects/Proposal_Site__c/fields/Load_Relief_Payments__c.field-meta.xml
<CustomField>
    <fullName>Load_Relief_Payments__c</fullName>
    <label>Load Relief Payments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>