force-app/main/default/objects/Proposal_Site__c/fields/Measured_Building_Energy_Performance_c__c.field-meta.xml
<CustomField>
    <fullName>Measured_Building_Energy_Performance_c__c</fullName>
    <description>Changed from Measured Energy Use Intensity (EUI) to Measured Building Energy Performance for ticket #SF-30463</description>
    <label>Measured Building Energy Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>