force-app/main/default/objects/Proposal_Site__c/fields/Measured_Consumption_Beginning_Date__c.field-meta.xml
<CustomField>
    <fullName>Measured_Consumption_Beginning_Date__c</fullName>
    <description>Enter the beginning date of the data. For monthly data the day portion of the date will establish the 30-day billing cycle.</description>
    <inlineHelpText>Enter the beginning date of the data. For monthly data the day portion of the date will establish the 30-day billing cycle.</inlineHelpText>
    <label>Measured Consumption: Beginning Date</label>
    <type>Date</type>
</CustomField>