force-app/main/default/objects/Proposal_Site__c/fields/Measured_Consumption_Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>Measured_Consumption_Ending_Date__c</fullName>
    <description>Enter the ending date of the data. For monthly data the day portion of the date will establish the 30-day billing cycle.
SF-30463</description>
    <inlineHelpText>Enter the ending date of the data. For monthly data the day portion of the date will establish the 30-day billing cycle.</inlineHelpText>
    <label>Measured Consumption: Ending Date</label>
    <type>Date</type>
</CustomField>