force-app/main/default/objects/Proposal_Site__c/fields/Measured_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Measured_Data_Source__c</fullName>
    <description>SF-30463</description>
    <inlineHelpText>Select the source of the data.</inlineHelpText>
    <label>Measured Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architect/Engineer Plans</fullName>
            </value>
            <value>
                <fullName>Building Management System (BMS) Data</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Energy Model</fullName>
            </value>
            <value>
                <fullName>Metering or Sub-Metering</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Performance Validation</fullName>
            </value>
            <value>
                <fullName>Portfolio Manager</fullName>
            </value>
            <value>
                <fullName>Real Time Energy Management (RTEM) System Data</fullName>
            </value>
            <value>
                <fullName>Utility Bills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>