force-app/main/default/objects/Proposal_Site__c/fields/Measured_EUI__c.field-meta.xml
<CustomField>
    <fullName>Measured_EUI__c</fullName>
    <label>Measured Energy Use Intensity (EUI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>