force-app/main/default/objects/Proposal_Site__c/fields/Measured_Net_Site_EUI__c.field-meta.xml
<CustomField>
    <fullName>Measured_Net_Site_EUI__c</fullName>
    <description>The actual annual EUI minus annual on-site RPI.</description>
    <formula>Measured_Total_Site_Energy_Use_Intensity__c  -  Measured_Site_RPI__c</formula>
    <inlineHelpText>The actual annual EUI minus annual on-site RPI.</inlineHelpText>
    <label>Measured Net Site EUI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>