force-app/main/default/objects/Proposal_Site__c/fields/Measured_Net_Source_EUI__c.field-meta.xml
<CustomField>
    <fullName>Measured_Net_Source_EUI__c</fullName>
    <description>Actual source EUI minus source RPI.</description>
    <formula>Measured_Source_Energy_Use_Intensity_EU__c - Measured_Source_RPI__c</formula>
    <inlineHelpText>Actual source EUI minus source RPI.</inlineHelpText>
    <label>Measured Net Source EUI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>