force-app/main/default/objects/Proposal_Site__c/fields/Measured_Site_RPI__c.field-meta.xml
<CustomField>
    <fullName>Measured_Site_RPI__c</fullName>
    <description>Measured Site Renewable Production Intensity (RPI). The actual annual on-site renewable energy produced (kBtu) per gross square foot (sf) of the building floor area. SF-30463</description>
    <inlineHelpText>Measured Site Renewable Production Intensity (RPI). The actual annual on-site renewable energy produced (kBtu) per gross square foot (sf) of the building floor area.</inlineHelpText>
    <label>Measured Site RPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>