force-app/main/default/objects/Proposal_Site__c/fields/Measured_Source_Energy_Use_Intensity_EU__c.field-meta.xml
<CustomField>
    <fullName>Measured_Source_Energy_Use_Intensity_EU__c</fullName>
    <label>Measured Source EUI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>