force-app/main/default/objects/Proposal_Site__c/fields/Measured_Source_RPI__c.field-meta.xml
<CustomField>
    <fullName>Measured_Source_RPI__c</fullName>
    <description>Measured Source RPI</description>
    <inlineHelpText>Measured Source Renewable Production Intensity (RPI)</inlineHelpText>
    <label>Measured Source RPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>