force-app/main/default/objects/Proposal_Site__c/fields/Measured_Total_Site_Energy_Use_Intensity__c.field-meta.xml
<CustomField>
    <fullName>Measured_Total_Site_Energy_Use_Intensity__c</fullName>
    <description>The actual annual energy use (kBtu) per gross square foot (sf) of building floor area. Energy use includes consumption from all fuels. Site energy use is typically available from utility bills or sub-metering. SF-30463</description>
    <inlineHelpText>The actual annual energy use (kBtu) per gross square foot (sf) of building floor area. Energy use includes consumption from all fuels. Site energy use is typically available from utility bills or sub-metering.</inlineHelpText>
    <label>Measured Total Site EUI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>