force-app/main/default/objects/Proposal_Site__c/fields/Measured_zEPI_score__c.field-meta.xml
<CustomField>
    <fullName>Measured_zEPI_score__c</fullName>
    <description>The actual metric on a 0-100 scale that sets a constant goal of Zero Energy and is normalized by climate and building type. See NBI website for more information. SF-30463</description>
    <inlineHelpText>The actual metric on a 0-100 scale that sets a constant goal of Zero Energy and is normalized by climate and building type. See NBI website for more information.</inlineHelpText>
    <label>Measured zEPI score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>