force-app/main/default/objects/Proposal_Site__c/fields/Metering_Method__c.field-meta.xml
<CustomField>
    <fullName>Metering_Method__c</fullName>
    <label>Metering Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-site metering</fullName>
            </value>
            <value>
                <fullName>Remote net metering</fullName>
            </value>
            <value>
                <fullName>Community DG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>