force-app/main/default/objects/Proposal_Site__c/fields/Multiple_Buildings__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Buildings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Buildings</label>
    <type>Checkbox</type>
</CustomField>