force-app/main/default/objects/Proposal_Site__c/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <label>NAICS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>