force-app/main/default/objects/Proposal_Site__c/fields/Nameplate_Capacity_MW__c.field-meta.xml
<CustomField>
    <fullName>Nameplate_Capacity_MW__c</fullName>
    <description>Nameplate Capacity in MW</description>
    <inlineHelpText>Nameplate Capacity in MW</inlineHelpText>
    <label>Nameplate Capacity(MW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>