force-app/main/default/objects/Proposal_Site__c/fields/Natural_Gas_Moratorium_Area__c.field-meta.xml
<CustomField>
    <fullName>Natural_Gas_Moratorium_Area__c</fullName>
    <inlineHelpText>Learn more and verify eligibility by visiting nyserda.ny.gov/ActionPlan</inlineHelpText>
    <label>Utility Company Natural Gas Moratorium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Con Edison – Southern Westchester County</fullName>
            </value>
            <value>
                <fullName>NYSEG – Town of Lansing, NY</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>