force-app/main/default/objects/Proposal_Site__c/fields/Net_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Net_Consumption__c</fullName>
    <description>Utility bills may provide only the net energy consumption. If consumption and production is reported separately please provide both. SF-30463</description>
    <inlineHelpText>Utility bills may provide only the net energy consumption. If consumption and production is reported separately please provide both.</inlineHelpText>
    <label>Net Consumption?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only Net Energy Consumption Available</fullName>
            </value>
            <value>
                <fullName>Consumption &amp; Production Reported Separately</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>