force-app/main/default/objects/Proposal_Site__c/fields/Net_Site_Energy_Use_Intensity_EUI__c.field-meta.xml
<CustomField>
    <fullName>Net_Site_Energy_Use_Intensity_EUI__c</fullName>
    <description>The annual EUI minus annual on-site RPI.</description>
    <formula>Total_Site_Energy_Use_Intensity_EUI__c  -  Site_Renewable_Production_Intensity_RPI__c</formula>
    <inlineHelpText>The annual EUI minus annual on-site RPI.</inlineHelpText>
    <label>Net Site Energy Use Intensity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>