force-app/main/default/objects/Proposal_Site__c/fields/Net_Source_Energy_Use_Intensity_EUI__c.field-meta.xml
<CustomField>
    <fullName>Net_Source_Energy_Use_Intensity_EUI__c</fullName>
    <description>Source EUI minus source RPI.</description>
    <formula>Source_Energy_Use_Intensity_EUI__c  -  Source_Renewable_Production_Intensity__c</formula>
    <inlineHelpText>Source EUI minus source RPI.</inlineHelpText>
    <label>Net Source Energy Use Intensity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>