force-app/main/default/objects/Proposal_Site__c/fields/No_Community_Credit__c.field-meta.xml
<CustomField>
    <fullName>No_Community_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No Community Credit</description>
    <inlineHelpText>No Community Credit</inlineHelpText>
    <label>No Community Credit</label>
    <type>Checkbox</type>
</CustomField>