force-app/main/default/objects/Proposal_Site__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <inlineHelpText>Enter the number of employees that reside or will reside in the modeled space.</inlineHelpText>
    <label>Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>