force-app/main/default/objects/Proposal_Site__c/fields/Number_of_Tenants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tenants__c</fullName>
    <inlineHelpText>Enter the total number of individual tenants within the building.</inlineHelpText>
    <label>Number of Tenant Spaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>