force-app/main/default/objects/Proposal_Site__c/fields/NYISO_Zone__c.field-meta.xml
<CustomField>
    <fullName>NYISO_Zone__c</fullName>
    <label>NYISO Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zone A</fullName>
            </value>
            <value>
                <fullName>Zone B</fullName>
            </value>
            <value>
                <fullName>Zone C</fullName>
            </value>
            <value>
                <fullName>Zone D</fullName>
            </value>
            <value>
                <fullName>Zone E</fullName>
            </value>
            <value>
                <fullName>Zone F</fullName>
            </value>
            <value>
                <fullName>Zone G</fullName>
            </value>
            <value>
                <fullName>Zone H</fullName>
            </value>
            <value>
                <fullName>Zone I</fullName>
            </value>
            <value>
                <fullName>Zone J</fullName>
            </value>
            <value>
                <fullName>Zone K</fullName>
            </value>
            <value>
                <fullName>A - West</fullName>
            </value>
            <value>
                <fullName>B - Genessee</fullName>
            </value>
            <value>
                <fullName>C - Central</fullName>
            </value>
            <value>
                <fullName>D - North</fullName>
            </value>
            <value>
                <fullName>E - Mohawk Valley</fullName>
            </value>
            <value>
                <fullName>F - Capital</fullName>
            </value>
            <value>
                <fullName>G - Hudson Valley</fullName>
            </value>
            <value>
                <fullName>H- Millwood</fullName>
            </value>
            <value>
                <fullName>I- Dunwoodie</fullName>
            </value>
            <value>
                <fullName>J - NYC</fullName>
            </value>
            <value>
                <fullName>K- Long Island</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>