force-app/main/default/objects/Proposal_Site__c/fields/NYPA__c.field-meta.xml
<CustomField>
    <fullName>NYPA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, you are required to upload proof that this project is in NYPA territory. Do not check this box if customer pays into SBC/RPS.</inlineHelpText>
    <label>NYPA</label>
    <type>Checkbox</type>
</CustomField>