force-app/main/default/objects/Proposal_Site__c/fields/Original_Commercial_Operation_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Commercial_Operation_Date__c</fullName>
    <description>Original Commercial Operation Date in previous location.</description>
    <inlineHelpText>Original Commercial Operation Date in previous location.</inlineHelpText>
    <label>Original Commercial Operation Date</label>
    <type>Date</type>
</CustomField>