force-app/main/default/objects/Proposal_Site__c/fields/Other_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Fuel_Type__c</fullName>
    <description>Select the customer&apos;s other fuel type</description>
    <inlineHelpText>Please note if the customer uses a fuel for space and water conditioning other than electricity or natural gas.</inlineHelpText>
    <label>Other Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Oil</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Utility Generated Steam</fullName>
            </value>
            <value>
                <fullName>Non-Utility Generated Steam (on site)</fullName>
            </value>
            <value>
                <fullName>Non-Utility Generated Steam (off site)</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Kerosene</fullName>
            </value>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
            <value>
                <fullName>Wood Pellets</fullName>
            </value>
            <value>
                <fullName>I don&apos;t know</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>