force-app/main/default/objects/Proposal_Site__c/fields/Other_Fuel_Type_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Fuel_Type_Supplier_Name__c</fullName>
    <description>Enter the customer&apos;s other fuel supplier name</description>
    <label>Other Fuel Type Supplier Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>