force-app/main/default/objects/Proposal_Site__c/fields/Other_Primary_Cooling_System__c.field-meta.xml
<CustomField>
    <fullName>Other_Primary_Cooling_System__c</fullName>
    <label>Other Primary Cooling System</label>
    <length>250</length>
    <type>Text</type>
</CustomField>