force-app/main/default/objects/Proposal_Site__c/fields/Other_Primary_Heating_System__c.field-meta.xml
<CustomField>
    <fullName>Other_Primary_Heating_System__c</fullName>
    <description>If Selected &apos;Other&apos; specify primary heating system</description>
    <inlineHelpText>You must provide the &apos;other&apos; specify primary heating system.</inlineHelpText>
    <label>Other Primary Heating System</label>
    <length>250</length>
    <type>Text</type>
</CustomField>