force-app/main/default/objects/Proposal_Site__c/fields/Other_Secondary_Heating_System__c.field-meta.xml
<CustomField>
    <fullName>Other_Secondary_Heating_System__c</fullName>
    <label>Other Secondary Heating System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>