force-app/main/default/objects/Proposal_Site__c/fields/Outage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Outage_End_Date__c</fullName>
    <description>The end date of the required outage of the electric generating facility. (used by LSR)</description>
    <inlineHelpText>The end date of the required outage of the electric generating facility. (used by LSR)</inlineHelpText>
    <label>Outage End Date</label>
    <type>Date</type>
</CustomField>