force-app/main/default/objects/Proposal_Site__c/fields/Outage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Outage_Start_Date__c</fullName>
    <description>The start date of the required outage of the electric generating facility. (used by LSR)</description>
    <inlineHelpText>The start date of the required outage of the electric generating facility. (used by LSR)</inlineHelpText>
    <label>Outage Start Date</label>
    <type>Date</type>
</CustomField>