force-app/main/default/objects/Proposal_Site__c/fields/Percent_of_conditioned_area_square_feet__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_conditioned_area_square_feet__c</fullName>
    <description>Enter the percentage of square footage of the area to be conditioned by the unit</description>
    <inlineHelpText>What percentage of the total square footage will be heated and cooled by the unit? Please enter a value between 0-100 (two decimals allowed).</inlineHelpText>
    <label>Percent of conditioned area(square feet)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>