force-app/main/default/objects/Proposal_Site__c/fields/Performance_Tier__c.field-meta.xml
<CustomField>
    <fullName>Performance_Tier__c</fullName>
    <description>Please select performance tier, refer to LR NCP Guidelines or MF NCP Guidelines for additional information.</description>
    <label>Performance Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>