force-app/main/default/objects/Proposal_Site__c/fields/Post_Installation_Site_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Installation_Site_Visit_Date__c</fullName>
    <label>Post-Installation Site Visit Date</label>
    <type>Date</type>
</CustomField>