force-app/main/default/objects/Proposal_Site__c/fields/Pre_Installation_Site_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Installation_Site_Visit_Date__c</fullName>
    <label>Pre-Installation Site Visit Date</label>
    <type>Date</type>
</CustomField>