force-app/main/default/objects/Proposal_Site__c/fields/Primary_Fuel_POD_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Fuel_POD_Number__c</fullName>
    <label>Primary Fuel POD Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>