force-app/main/default/objects/Proposal_Site__c/fields/Primary_Heating_System__c.field-meta.xml
<CustomField>
    <fullName>Primary_Heating_System__c</fullName>
    <description>Select the customer&apos;s primary heating system</description>
    <label>Primary Heating System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air-Source Heat Pump</fullName>
            </value>
            <value>
                <fullName>Baseboard Heat</fullName>
            </value>
            <value>
                <fullName>Central Forced Air</fullName>
            </value>
            <value>
                <fullName>Coil</fullName>
            </value>
            <value>
                <fullName>Fireplace</fullName>
            </value>
            <value>
                <fullName>Ground Source Heat Pump</fullName>
            </value>
            <value>
                <fullName>Hot water</fullName>
            </value>
            <value>
                <fullName>Portable electric heater</fullName>
            </value>
            <value>
                <fullName>Portable Kerosene heater</fullName>
            </value>
            <value>
                <fullName>Solar panels</fullName>
            </value>
            <value>
                <fullName>Steam</fullName>
            </value>
            <value>
                <fullName>Wood/Pellet</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>