force-app/main/default/objects/Proposal_Site__c/fields/Project_Cost__c.field-meta.xml
<CustomField>
    <fullName>Project_Cost__c</fullName>
    <inlineHelpText>This is the total cost of developing an energy efficiency package (energy model, list of energy conservation recommendations, financial analysis.</inlineHelpText>
    <label>Project Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>