force-app/main/default/objects/Proposal_Site__c/fields/Project_Performance__c.field-meta.xml
<CustomField>
    <fullName>Project_Performance__c</fullName>
    <description>SF-29528</description>
    <label>Project Performance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carbon Neutral Ready</fullName>
            </value>
            <value>
                <fullName>High Performance</fullName>
            </value>
            <value>
                <fullName>Net Zero Energy Certified</fullName>
            </value>
            <value>
                <fullName>Net Zero Energy Emerging</fullName>
            </value>
            <value>
                <fullName>Net Zero Energy Verified</fullName>
            </value>
            <value>
                <fullName>Passive House</fullName>
            </value>
            <value>
                <fullName>Ultra Low Energy (ULE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>