force-app/main/default/objects/Proposal_Site__c/fields/PV_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>PV_Site_Address__c</fullName>
    <label>PV Site Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Host Customer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>