force-app/main/default/objects/Proposal_Site__c/fields/Recommissioning_Date__c.field-meta.xml
<CustomField>
    <fullName>Recommissioning_Date__c</fullName>
    <label>Recommissioning Date</label>
    <type>Date</type>
</CustomField>